fix spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -36,7 +36,8 @@ body {
 	font-size: 4.1em;
 	font-family: "Arkipelago", sans-serif;
 	font-weight: 500;
-	margin-top: -39%;
+	/* margin-top: -39%; */
+	padding-top: 2px;
 	font-family: "Muster", sans-serif;
 	transform: rotate(-7grad);
 }
@@ -60,7 +61,7 @@ body {
 	display: inline-block;
 	/* margin-left: 15%; */
 	/* margin-top: 10px; */
-	margin-top: 5%;
+	margin-top: 8%;
 }
 
 .titleDescription {
@@ -69,7 +70,7 @@ body {
 	/* margin-top: -87px; */
 	/* margin-top: 30%; */
 	z-index: 100;
-	padding-bottom: 66px;
+	padding-bottom: 10%;
 }
 
 .contact {
